module-kubernetes/k8s/deployment-ns.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: server
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: server-read
      containers:
        - name: server
          image: wesleywillians/hello-express
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 80
