module-kubernetes/k8s/deployments.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: "go-server"
  labels:
    app: "go-server"

spec:
  replicas: 3
  selector:
    matchLabels:
      app: "go-server"
  template:
    metadata:
      labels:
        app: "go-server"
    spec:
      containers:
        - name: "go-server"
          image: "leandrodbdias/hello-go:v6"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 3
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 1
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: config-volume
              mountPath: "/myfamily"
              readOnly: true
            - name: go-server-volume
              mountPath: "/go/pvc"

      volumes:
        - name: go-server-volume
          persistentVolumeClaim:
            claimName: go-server-pvc
        - name: config-volume
          configMap:
            name: go-server-configmap-family
            items:
              - key: members
                path: "family.txt"
