module-kubernetes/k8s/pod.yml
apiVersion: v1

kind: Pod

metadata:
  name: "go-server"
  labels:
    app: "go-server"

spec:
  containers:
    - name: "go-server"
      image: "leandrodbdias/hello-go:latest"
