module-kubernetes/k8s/loadbalancer.yml
apiVersion: v1

kind: Service

metadata:
  name: go-server-service

spec:
  selector:
    app: go-server
  type: LoadBalancer
  ports:
    - name: go-server-service
      port: 80
      protocol: TCP
      targetPort: 80
