module-kubernetes/k8s/service-mysql-headless.yml
apiVersion: v1

kind: Service

metadata:
  name: mysql-headless

spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql-headless
      port: 3306
