module-kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx
  rules:
    - host: ingress.fullcycle.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server-service
                port:
                  number: 80
  tls:
    - hosts:
        - ingress.fullcycle.com.br
      secretName: ingress-tls
